maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:11: error: value update is not a member of List[List[Int]]
      Coord(sol+1)=Coord(sol+1)+marquage(Coord(sol)(0),Coord(sol)(1),sol)
      ^ShortestPathMaze:31: error: type List takes type parameters
def marquage(x:Int,y:Int,sol:Int):List ={
                                  ^ShortestPathMaze:12: error: value update is not a member of List[List[Int]]
      Coord(sol)=Coord(sol).tail()
      ^ShortestPathMaze:12: error: not enough arguments for method apply: (n: Int)Int in trait LinearSeqOptimized.
Unspecified value parameter n.
      Coord(sol)=Coord(sol).tail()
                                ^ShortestPathMaze:13: error: value update is not a member of List[List[Int]]
      Coord(sol)=Coord(sol).tail()
      ^ShortestPathMaze:13: error: not enough arguments for method apply: (n: Int)Int in trait LinearSeqOptimized.
Unspecified value parameter n.
      Coord(sol)=Coord(sol).tail()
                                ^ShortestPathMaze:31: error: type List takes type parameters
def marquage(x:Int,y:Int,sol:Int):List ={
                                  ^ShortestPathMaze:36: error: type mismatch;
 found   : List[Int]
 required: String
      L=L+List(x,y-1)
              ^ShortestPathMaze:42: error: type mismatch;
 found   : List[Int]
 required: String
      L=L+List(x-1,y)
              ^ShortestPathMaze:48: error: type mismatch;
 found   : List[Int]
 required: String
      L=L+List(x+1,y)
              ^ShortestPathMaze:54: error: type mismatch;
 found   : List[Int]
 required: String
      L=L+List(x,y+1)
              ^